--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,18 @@ endif(WIN32)
 
 include( "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Configure.cmake" )
 
+
+
+######openCV
+
+find_package(OpenCV REQUIRED )
+
+INCLUDE_DIRECTORIES( ${CMAKE_CURRENT_SOURCE_DIR}/include )
+INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
+link_directories( ${CMAKE_BINARY_DIR}/bin)
+link_directories(${OpenCV_LIB_DIR})
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
+
 ############################### GTest ###############################
 add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/3rdparty/gtest")
 include_directories("${CMAKE_SOURCE_DIR}/3rdparty/gtest/googletest/include")
@@ -89,3 +101,4 @@ endif( USE_LATEX )
 ############################## Modules ##############################
 include_directories(3rdparty/unapproved)
 add_subdirectory(modules)
+
