--- a/modules/task_3/guschin_a_cc_labeling/CMakeLists.txt
+++ b/modules/task_3/guschin_a_cc_labeling/CMakeLists.txt
@@ -25,3 +25,11 @@ if ( USE_TBB )
 else( USE_TBB )
     message( STATUS "-- ${ProjectId} - NOT BUILD!"  )
 endif( USE_TBB )
+
+
+if (USE_OPENCV)
+      add_definitions(-DOPENCV=1)
+      find_package( OpenCV REQUIRED )
+      include_directories("${CMAKE_CURRENT_SOURCE_DIR}" ${OpenCV_INCLUDE_DIRS})
+      target_link_libraries(${ProjectId} ${OpenCV_LIBS})
+    endif( USE_OPENCV)
