--- a/modules/task_4/guschin_a_cc_labeling/CMakeLists.txt
+++ b/modules/task_4/guschin_a_cc_labeling/CMakeLists.txt
@@ -21,3 +21,10 @@ if ( USE_STD )
 else( USE_STD )
     message( STATUS "-- ${ProjectId} - NOT BUILD!"  )
 endif( USE_STD )
+
+if (USE_OPENCV)
+      add_definitions(-DOPENCV=1)
+      find_package( OpenCV REQUIRED )
+      include_directories("${CMAKE_CURRENT_SOURCE_DIR}" ${OpenCV_INCLUDE_DIRS})
+      target_link_libraries(${ProjectId} ${OpenCV_LIBS})
+    endif( USE_OPENCV)
